[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/UI/PauseMainMenu.png" type="Texture" id=1]
[ext_resource path="res://EscenaPause.gd" type="Script" id=2]
[ext_resource path="res://Art/UI/HoverPauseQuit.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/HoverPauseResume.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/PauseQuitButton.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/PauseResume.png" type="Texture" id=6]
[ext_resource path="res://Art/UI/HoverPauseMainMenu.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=4]

[node name="EscenaPause" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Popup" type="Popup" parent="."]
visible = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Resume" type="Button" parent="Popup"]
margin_left = 395.0
margin_top = 275.0
margin_right = 1533.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 4 )
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="Resume" type="TextureButton" parent="Popup/Resume"]
margin_left = 5.0
margin_top = 2.0
margin_right = 1143.0
margin_bottom = 187.0
texture_hover = ExtResource( 4 )

[node name="Quit" type="Button" parent="Popup"]
margin_left = 397.0
margin_top = 689.0
margin_right = 1535.0
margin_bottom = 874.0
custom_fonts/font = SubResource( 4 )
text = "Reanudar"
icon = ExtResource( 5 )
flat = true

[node name="Quit" type="TextureButton" parent="Popup/Quit"]
margin_left = 6.0
margin_top = 2.0
margin_right = 1144.0
margin_bottom = 187.0
texture_hover = ExtResource( 3 )

[node name="MainMenu" type="Button" parent="Popup"]
margin_left = 395.0
margin_top = 482.0
margin_right = 1533.0
margin_bottom = 667.0
custom_fonts/font = SubResource( 4 )
text = "Reanudar"
icon = ExtResource( 1 )
flat = true
icon_align = 1

[node name="MainMenu" type="TextureButton" parent="Popup/MainMenu"]
margin_left = 5.0
margin_top = 2.0
margin_right = 1143.0
margin_bottom = 187.0
texture_hover = ExtResource( 7 )

[connection signal="pressed" from="Popup/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Popup/Resume/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Popup/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Popup/Quit/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Popup/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Popup/MainMenu/MainMenu" to="." method="_on_MainMenu_pressed"]
